--- a/Index.ipynb
+++ b/Index.ipynb
@@ -41,18 +41,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jake\n",
+      "terrance\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'other_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b482d184f7ce>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mexample_function\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# executing fuction with local variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing global variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing local variable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'other_name' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "name = \"terrance\" # global variable\n",
-    "def example_function():\n",
-    "    other_name = \"jake\" # local variable\n",
-    "    print(other_name)\n",
+    "# name = \"terrance\" # global variable\n",
+    "# def example_function():\n",
+    "#     other_name = \"jake\" # local variable\n",
+    "#     print(other_name)\n",
     "\n",
-    "example_function() # executing fuction with local variable\n",
-    "print(name) # printing global variable\n",
-    "print(other_name) # printing local variable"
+    "# example_function() # executing fuction with local variable\n",
+    "# print(name) # printing global variable\n",
+    "# print(other_name) # printing local variable"
    ]
   },
   {
@@ -66,17 +86,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "terrance\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'first_name' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-db59ca215ce5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mterrance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"terrance\"\u001b[0m \u001b[0;31m# adding an instance variable, first_name to the instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mterrance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfirst_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# printing instance variable accessed from the instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst_name\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# undefined since it is not being accessed from the instance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'first_name' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "class Person:\n",
-    "    pass\n",
+    "# class Person:\n",
+    "#     pass\n",
     "\n",
-    "terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
-    "terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
-    "print(terrance.first_name) # printing instance variable accessed from the instance\n",
-    "print(first_name) # undefined since it is not being accessed from the instance"
+    "# terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
+    "# terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
+    "# print(terrance.first_name) # printing instance variable accessed from the instance\n",
+    "# print(first_name) # undefined since it is not being accessed from the instance"
    ]
   },
   {
@@ -90,9 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.ExampleDriver object at 0x11261d278>\n",
+      "<__main__.ExampleDriver object at 0x11261d2b0>\n"
+     ]
+    }
+   ],
    "source": [
     "class ExampleDriver:\n",
     "    pass\n",
@@ -114,9 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alex\n"
+     ]
+    }
+   ],
    "source": [
     "driver_one.name = 'alex'\n",
     "print(driver_one.name)"
@@ -131,11 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# add name to driver_two"
+    "driver_two.name = 'julian'"
    ]
   },
   {
@@ -156,9 +212,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'julian'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two)"
    ]
@@ -172,11 +239,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['name'])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "vars(driver_two).keys()"
    ]
@@ -190,9 +268,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! How are you today?\n"
+     ]
+    }
+   ],
    "source": [
     "class Person:\n",
     "    def say_hello(self):\n",
@@ -218,17 +304,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "# %load_ext autoreload\n",
+    "# %autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = None # assign a driver instance\n",
-    "# give the driver instance object 'miles_driven' of 100000\n",
-    "passenger = None # assign the passenger instance\n",
-    "# give the passenger instance object a 'rating' of 4.9"
+    "driver = Driver() # assign a driver instance\n",
+    "driver.miles_driven = 100000 # give the driver instance object 'miles_driven' of 100000\n",
+    "passenger = Passenger # assign the passenger instance\n",
+    "passenger.rating = 4.9  # give the passenger instance object a 'rating' of 4.9"
    ]
   },
   {
@@ -264,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,9 +363,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<driver.Driver object at 0x1126319b0>\n",
+      "<driver.Driver object at 0x112631978>\n",
+      "Sorry we couldn't find a driver with the name, allison! :(\n"
+     ]
+    }
+   ],
    "source": [
     "alex_driver = Driver()\n",
     "alex_driver.name = \"alex\"\n",
@@ -304,10 +400,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alex', 'ashleigh']\n"
+     ]
+    }
+   ],
    "source": [
+    "print([driver.name for driver in list_of_drivers if driver.name[0] == 'a'])\n",
+    "\n",
     "# write your method here that returns the list of \n",
     "# drivers whose name starts which the letter 'a'"
    ]
@@ -336,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,21 +454,21 @@
     "jake_passenger.name = \"jake\"\n",
     "ashleigh_passenger = Passenger()\n",
     "ashleigh_passenger.name = \"ashleigh\"\n",
-    "list_of_passengers: [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
+    "list_of_passengers = [alex_passenger, michelle_passenger, jake_passenger, ashleigh_passenger]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_driver = None # instantiate a driver\n",
-    "# add the name attribute and assign it 'Garol'\n",
-    "# add the car_make attribute and assign it 'toyota'\n",
-    "# add the car_model attribute and assign it 'camry'\n",
-    "# add the age attribute and assign it '30'\n",
-    "# add the passengers attribute and assign it to the list_of_passengers"
+    "best_driver = Driver() # instantiate a driver\n",
+    "best_driver.name = 'Garol' # add the name attribute and assign it 'Garol'\n",
+    "best_driver.car_make = 'toyota' # add the car_make attribute and assign it 'toyota'\n",
+    "best_driver.car_model = 'camry' # add the car_model attribute and assign it 'camry'\n",
+    "best_driver.age = 30 # add the age attribute and assign it '30'\n",
+    "best_driver.passengers = list_of_passengers # add the passengers attribute and assign it to the list_of_passengers"
    ]
   },
   {
@@ -375,11 +481,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alex', 'michelle', 'jake', 'ashleigh']\n"
+     ]
+    }
+   ],
    "source": [
-    "names_of_passengers = None # assign the return of best_driver.passenger_names()"
+    "names_of_passengers = best_driver.passenger_names() \n",
+    "print(names_of_passengers) # assign the return of best_driver.passenger_names()"
    ]
   },
   {
@@ -391,9 +506,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. alex\n",
+      "2. michelle\n",
+      "3. jake\n",
+      "4. ashleigh\n"
+     ]
+    }
+   ],
    "source": [
     "def display_names(list_of_names):\n",
     "    i = 1\n",
@@ -401,7 +527,7 @@
     "        print(\"{}. {}\".format(i, name))\n",
     "        i += 1\n",
     "\n",
-    "# call display_names with your list of passenger names"
+    "display_names(names_of_passengers) # call display_names with your list of passenger names"
    ]
   },
   {
@@ -428,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
