--- a/Index.ipynb
+++ b/Index.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this lab, we will practice using instance variables, and continue with our awesome `fuber` theme. In this directory, we have a couple files already provided for us, driver.py and passenger.py. We will use these to define our classes and instance methods."
+    "In this lab, we will practice using instance variables, which we use to store information about a particular instance object. We will use our `fuber` theme and create some methods that operate on our instance variables to return some valuable information about our passenger and driver instance objects."
    ]
   },
   {
@@ -21,22 +21,22 @@
    "source": [
     "## Objectives\n",
     "\n",
-    "* Define instance variables.\n",
-    "* Describe how instance variables give objects attributes and properties."
+    "* Define instance variables\n",
+    "* Describe how instance variables give objects attributes and properties"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defining Instance Variables"
+    "## Instructions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have been writing functions and working with variables for a while now. We've talked about the difference between global variables and local variables. However, classes add another level of complexity with instance variables. Remember the difference between local and global variables is their scope. Local varibles have local or function scope, that is that they are only able to be accessed inside the function in which they are defined. Global variables can be accessed from anywhere in the file. Below is an example to jog your memory, if this is a little confusing:  "
+    "Below, define classes for both a Driver and a Passenger -- for now just define the classes and remember to include the keyword `pass` so that we will have valid syntax for our classes."
    ]
   },
   {
@@ -45,23 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"terrance\" # global variable\n",
-    "def example_function():\n",
-    "    other_name = \"jake\" # local variable\n",
-    "    print(other_name)\n",
-    "\n",
-    "example_function() # executing fuction with local variable\n",
-    "print(name) # printing global variable\n",
-    "print(other_name) # printing local variable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Again, our local variable is bound to its local or function scope, so when we try to print its value outside of the function it is undefined. This brings us to instance variables. They act similarly in that they are bound to their instance. This means we define instance variables **on** instance objects. These instance variables are then only accessible through the instance on which they were defined.\n",
-    "\n",
-    "The following is an example of adding an instance variable to an instance object and then accessing it later. Don't worry if it is confusing right now, the rest of this lesson will clear things up."
+    "# Driver class"
    ]
   },
   {
@@ -70,170 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Person:\n",
-    "    pass\n",
-    "\n",
-    "terrance = Person() # instantiating instance object from Person class called 'terrance'\n",
-    "terrance.first_name = \"terrance\" # adding an instance variable, first_name to the instance\n",
-    "print(terrance.first_name) # printing instance variable accessed from the instance\n",
-    "print(first_name) # undefined since it is not being accessed from the instance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Okay, But Why Do We Need Instance Variables?\n",
-    "\n",
-    "Let's imagine we have two drivers. We instantiate them as instances of the `ExampleDriver` class and assign them to variables, `driver_one` and `driver_two`. Let's see this:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class ExampleDriver:\n",
-    "    pass\n",
-    "    \n",
-    "driver_one = ExampleDriver()\n",
-    "driver_two = ExampleDriver()\n",
-    "print(driver_one)\n",
-    "print(driver_two)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice anything? Pretty hard to tell who is who... How can we fix this? We could probably give them names, right? Well, how do we assign a name to these instances?\n",
-    "\n",
-    "That's where instance variables come in. Instance variables can be thought of as an attribute on an object. So, if we want our instance objects to have a `name` attribute, we simply need to add it to the object."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "driver_one.name = 'alex'\n",
-    "print(driver_one.name)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Great! We have made our first instance variable and we can now start to differentiate our instance objects and make them a bit more interesting. To reiterate, adding an attribute like `name` to an instance object is done by simply using the following syntax: `variable-dot-attribute = value`. Let's add driver_two's name now, let's name them 'julian'."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# add name to driver_two"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, we can imagine wanting to add many instance variables to these instance objects which would make them quite complex. We will want a way to look at the instance variables -- similar to how we want to be able to look at the keys in a dictionary. Luckily for us, there is a method that shows us just that! \n",
-    "\n",
-    "`vars` is a method that returns a dictionary containing the keys and values that represent the instance variable names and values of an instance object. Let's see it in action:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> **Note:** instance variables and instance methods both can be referred to as `attributes` of an instance object. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "vars(driver_two)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Since `vars` returns a dictionary, we can even go a step further and just look at the attributes without their associated values by calling the `keys` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "vars(driver_two).keys()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Awesome! As the note above states, instance variables aren't the only attribute. Our instance methods are also attributes, so, let's see again how we make those:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Person:\n",
-    "    def say_hello(self):\n",
-    "        print(\"Hi! How are you today?\")\n",
-    "        \n",
-    "jeff = Person()\n",
-    "jeff.say_hello()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So, as we can see instance variables and instance methods look very similar syntactically. In fact, the main difference between the two is that instance methods are callable attributes on an instance object and instance variables are not callable. This makes sense since instance methods have a block of code to execute and instance variables do not. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Remember how we said that there were a couple files provided for us? Let's put them to use and define both a Driver and a Passenger class -- for now just define the classes and remember to include the keyword `pass`. Below we'll import them and load the `autoreload` extension from IPython."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from driver import Driver\n",
-    "from passenger import Passenger"
+    "# Passenger class"
    ]
   },
   {
@@ -259,7 +80,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Say we wanted to find a driver with a given name -- how would we do that? Let's take a look at how we could write a function that would take in a list of instance objects and return the one with the desired name."
+    "Say we wanted to find a driver with a given name -- how would we do that? Well, we could define a function that takes in a list of driver instance objects and the name we are searching for. We'll have to check each driver instance for their name and see if it matches the one given.\n",
+    "\n",
+    "If there are no drivers with the name we are searching, our function should return a message telling us it couldn't find that particular driver. For example, if we are looking for a driver named 'Jack' but cannot find one, we should get the message:\n",
+    "```python\n",
+    "\"Sorry we couldn't find a driver with the name, Jack! :(\"\n",
+    "```"
    ]
   },
   {
@@ -269,10 +95,8 @@
    "outputs": [],
    "source": [
     "def find_driver_by_name(list_drivers, name):\n",
-    "    for driver in list_drivers:\n",
-    "        if driver.name == name:\n",
-    "            return driver\n",
-    "    return \"Sorry we couldn't find a driver with the name, {}! :(\".format('allison')"
+    "    # write your code here\n",
+    "    pass"
    ]
   },
   {
@@ -283,12 +107,16 @@
    "source": [
     "alex_driver = Driver()\n",
     "alex_driver.name = \"alex\"\n",
+    "alex_driver.rating = 9.0\n",
     "michelle_driver = Driver()\n",
     "michelle_driver.name = \"michelle\"\n",
+    "michelle_driver.rating = 8.0\n",
     "jake_driver = Driver()\n",
     "jake_driver.name = \"jake\"\n",
+    "jake_driver.rating = 9.7\n",
     "ashleigh_driver = Driver()\n",
     "ashleigh_driver.name = \"ashleigh\"\n",
+    "ashleigh_driver.rating = 8.75\n",
     "list_of_drivers = [alex_driver, michelle_driver, jake_driver, ashleigh_driver]\n",
     "print(find_driver_by_name(list_of_drivers, \"jake\"))\n",
     "print(find_driver_by_name(list_of_drivers, \"michelle\"))\n",
@@ -299,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Cool! That looks like it worked. We can see that the method returns the Driver instance object when it finds an instance with the given name and returns a message saying that driver does not exist, if it cannot find a driver with that name. Now try writing a method that will return a list of instance objects that start with the letter `a`."
+    "Cool! That looks like it worked. We can see that the method returns the Driver instance object when it finds an instance with the given name and returns a message saying that driver does not exist, if it cannot find a driver with that name. Now try writing a method that will return a list of instance objects that start with a given substring like the letter `'a'`."
    ]
   },
   {
@@ -309,7 +137,27 @@
    "outputs": [],
    "source": [
     "# write your method here that returns the list of \n",
-    "# drivers whose name starts which the letter 'a'"
+    "# drivers whose name starts which the letter 'a'\n",
+    "def name_starts_with(drivers, substring):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next, let's use our list of drivers to define a method that returns the driver with the highest rating."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write your method here that returns the driver with the highest rating\n",
+    "def highest_rated_driver(drivers):\n",
+    "    pass"
    ]
   },
   {
@@ -331,7 +179,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Okay, now let's work on creating more complex instance objects. Let's make a driver, `best_driver`, that has the attributes `name`, `car_make`, `car_model`, `age`, and `passengers`. The `passengers` attribute will point to a list of rider instances. The list of riders is already provided for you below:"
+    "Okay, now let's work on creating more complex instance objects with more interesting instance methods. Let's define a `NewDriver` class with an instance method called, `passenger_names`. Then, instantiate a new instance of the NewDriver class called `best_driver` that has the attributes `name`, `car_make`, `car_model`, `age`, and `passengers`. The `passengers` attribute will point to the list of passenger instances, which is provided below as `list_of_passengers`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NewDriver:\n",
+    "    \n",
+    "    def passenger_names(self):\n",
+    "        # your code goes here\n",
+    "        pass"
    ]
   },
   {
@@ -357,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_driver = None # instantiate a driver\n",
+    "best_driver = None # instantiate a NewDriver instance object\n",
     "# add the name attribute and assign it 'Garol'\n",
     "# add the car_make attribute and assign it 'toyota'\n",
     "# add the car_model attribute and assign it 'camry'\n",
@@ -369,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alright, great! Now we have some attributes on our driver that we can work with. Let's create an instance method in the Driver class called `passenger_names` which returns a list of all the passengers' names that a driver has driven (i.e. a driver's `passengers`). \n",
+    "Alright, great! Now we have some attributes on our driver that we can work with. Let's create an instance method in the Driver class called `passenger_names` which returns a list of all the passengers' names/\n",
     "Your output should look like `['alex', 'michelle', 'jake', 'ashleigh']`."
    ]
   },
@@ -395,13 +256,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def display_names(list_of_names):\n",
+    "def display_names():\n",
     "    i = 1\n",
-    "    for name in list_of_names:\n",
+    "    for name in best_driver.passenger_names():\n",
     "        print(\"{}. {}\".format(i, name))\n",
     "        i += 1\n",
     "\n",
-    "# call display_names with your list of passenger names"
+    "# call display_names to see a formatted list of names"
    ]
   },
   {
@@ -409,6 +270,20 @@
    "metadata": {},
    "source": [
     "Neat -- great work! "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this lab, we practiced creating instance variables that add information to our instance objects. We then used instance methods that used and operated on these instance variables to answer questions and return information about our instance objects."
    ]
   }
  ],
@@ -428,7 +303,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
