moved one cell back to proper order

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -94,17 +94,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def find_driver_by_name(list_drivers, name):\n",
-    "    # write your code here\n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "alex_driver = Driver()\n",
     "alex_driver.name = \"alex\"\n",
     "alex_driver.rating = 9.0\n",
@@ -121,6 +110,17 @@
     "print(find_driver_by_name(list_of_drivers, \"jake\"))\n",
     "print(find_driver_by_name(list_of_drivers, \"michelle\"))\n",
     "print(find_driver_by_name(list_of_drivers, \"allison\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_driver_by_name(drivers, name):\n",
+    "    # write your code here\n",
+    "    pass"
    ]
   },
   {
