--- a/Index.ipynb
+++ b/Index.ipynb
@@ -45,7 +45,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Driver class"
+    "# Driver class\n",
+    "class Driver:\n",
+    "    pass"
    ]
   },
   {
@@ -54,7 +56,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Passenger class"
+    "# Passenger class\n",
+    "class Passenger:\n",
+    "    pass"
    ]
   },
   {
@@ -70,10 +74,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "driver = None # assign a driver instance\n",
+    "driver = Driver() # assign a driver instance\n",
     "# give the driver instance object 'miles_driven' of 100000\n",
-    "passenger = None # assign the passenger instance\n",
-    "# give the passenger instance object a 'rating' of 4.9"
+    "driver.miles_driven = 100000\n",
+    "passenger = Passenger() # assign the passenger instance\n",
+    "# give the passenger instance object a 'rating' of 4.9\n",
+    "passenger.rating = 4.9"
    ]
   },
   {
@@ -120,7 +126,10 @@
    "source": [
     "def find_driver_by_name(drivers, name):\n",
     "    # write your code here\n",
-    "    pass"
+    "    for driver in drivers:\n",
+    "        if driver.name == name:\n",
+    "            return driver\n",
+    "    return f\"Sorry we couldn't find a driver with the name, {name}! :(\"        "
    ]
   },
   {
@@ -139,7 +148,7 @@
     "# write your method here that returns the list of \n",
     "# drivers whose name starts which the letter 'a'\n",
     "def name_starts_with(drivers, substring):\n",
-    "    pass"
+    "    return [driver for driver in drivers if driver.startswith(subtstring)]"
    ]
   },
   {
@@ -157,7 +166,11 @@
    "source": [
     "# write your method here that returns the driver with the highest rating\n",
     "def highest_rated_driver(drivers):\n",
-    "    pass"
+    "    highest_rated = drivers[0]\n",
+    "    for driver in drivers:\n",
+    "        if driver.rating > highest_rated.rating:\n",
+    "            highest_rated = driver\n",
+    "    return highest_rated"
    ]
   },
   {
