updated readme to remove undefined method error

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -112,10 +112,7 @@
     "ashleigh_driver = Driver()\n",
     "ashleigh_driver.name = \"ashleigh\"\n",
     "ashleigh_driver.rating = 8.75\n",
-    "list_of_drivers = [alex_driver, michelle_driver, jake_driver, ashleigh_driver]\n",
-    "print(find_driver_by_name(list_of_drivers, \"jake\"))\n",
-    "print(find_driver_by_name(list_of_drivers, \"michelle\"))\n",
-    "print(find_driver_by_name(list_of_drivers, \"allison\"))"
+    "list_of_drivers = [alex_driver, michelle_driver, jake_driver, ashleigh_driver]"
    ]
   },
   {
@@ -130,6 +127,17 @@
     "        if driver.name == name:\n",
     "            return driver\n",
     "    return f\"Sorry we couldn't find a driver with the name, {name}! :(\"        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(find_driver_by_name(list_of_drivers, \"jake\"))\n",
+    "print(find_driver_by_name(list_of_drivers, \"michelle\"))\n",
+    "print(find_driver_by_name(list_of_drivers, \"allison\"))"
    ]
   },
   {
