--- a/Index.ipynb
+++ b/Index.ipynb
@@ -156,7 +156,7 @@
     "# write your method here that returns the list of \n",
     "# drivers whose name starts which the letter 'a'\n",
     "def name_starts_with(drivers, substring):\n",
-    "    return [driver for driver in drivers if driver.startswith(subtstring)]"
+    "    return [driver for driver in drivers if driver.name.startswith(substring)]"
    ]
   },
   {
