updating readme to fix undefined method error

--- a/Index.ipynb
+++ b/Index.ipynb
@@ -106,10 +106,7 @@
     "ashleigh_driver = Driver()\n",
     "ashleigh_driver.name = \"ashleigh\"\n",
     "ashleigh_driver.rating = 8.75\n",
-    "list_of_drivers = [alex_driver, michelle_driver, jake_driver, ashleigh_driver]\n",
-    "print(find_driver_by_name(list_of_drivers, \"jake\"))\n",
-    "print(find_driver_by_name(list_of_drivers, \"michelle\"))\n",
-    "print(find_driver_by_name(list_of_drivers, \"allison\"))"
+    "list_of_drivers = [alex_driver, michelle_driver, jake_driver, ashleigh_driver]"
    ]
   },
   {
@@ -121,6 +118,17 @@
     "def find_driver_by_name(drivers, name):\n",
     "    # write your code here\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(find_driver_by_name(list_of_drivers, \"jake\"))\n",
+    "print(find_driver_by_name(list_of_drivers, \"michelle\"))\n",
+    "print(find_driver_by_name(list_of_drivers, \"allison\"))"
    ]
   },
   {
